# game-night

./: .env  .gitignore  .lift.toml  README.md  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: application.yml  infrastructure.yml  nix_ci.yml  nixos.yml  packer.yml  terraform.yml  update_flake.yml
backend/: .lift.toml  Cargo.toml  sqlx-data.json
backend/migrations/: 20220508211006_create_users_table.up.sql  20220531134144_add_users_table_details.down.sql  20220531134144_add_users_table_details.up.sql  20220602005854_add_login_tables.down.sql  20220602005854_add_login_tables.up.sql
backend/src/: config.rs  email.rs  main.rs  telemetry.rs  token.rs
backend/src/api/: auth.rs  error.rs  mod.rs  user.rs
backend/src/db/: input_sanitization.rs  mod.rs  models.rs
backend/src/db/models/: auth.rs  user.rs
backend/src/db/queries/: auth.rs  user.rs
backend/templates/: login.html
documentation/: DEPLOYMENT.md
documentation/design/: API_STRUCTURE.md  AUTHENTICATION.md  EVENT_MANAGEMENT.md  HOME_PAGE.md  USER_MANAGEMENT.md
frontend/: .lift.toml  README.md  package-lock.json  package.json
frontend/src/components/: FlagLogo.vue
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue  LoginView.vue
infra/: README.md
infra/images/podman-base/: configuration.nix  hardware-configuration.nix
infra/images/podman-prod/: configuration.nix  hardware-configuration.nix  nginx.nix  nixos.pkr.hcl  plugins.pkr.hcl  variables.pkr.hcl  variables.pkrvars.hcl
infra/nixos/: configuration.nix  hardware-configuration.nix  nginx-prod.nix  nginx.nix  users.nix
infra/nixos/podman-prod/: configuration.nix
infra/terraform/: .terraform.lock.hcl  configuration.nix  domain.tf  droplets.tf  firewall.tf  main.tf  variables.tf  versions.tf
infra/terraform/nix/: configuration.nix  nginx.nix
